Мелкие редачи, допил страницы всех разделов

--- a/app/article/article_crosswalk-for-city.html
+++ b/app/article/article_crosswalk-for-city.html
@@ -72,14 +72,14 @@
 	</header>
 
 	<main>
-		<div class="container mt-5">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-10">
 					<div class="text-left">
 						<h1 class="h1-title title">Заборы в городе — ошибка</h1>
 					</div>
 
-					<div class="main mt-4">
+					<div class="main">
 						<img class="black article-img blank_fence-mistake" width="70%" height="auto" src="../img/articles/fence-mistake/0.jpg" alt="title">
 					</div>
 
@@ -129,17 +129,17 @@
 					<h5 class="article-text article-title">Другие статьи из раздела</h5>
 
 					<div class="row">
-						<div class="col-md-4 mt-3 blank-block">
+						<div class="col-md-4 blank-block">
 							<a href="article.html">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 							</a>
 						</div>
-						<div class="col-md-4 mt-3 blank-block">
+						<div class="col-md-4 blank-block">
 							<div class="blank"></div>
 							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 						</div>
-						<div class="col-md-4 mt-3 blank-block">
+						<div class="col-md-4 blank-block">
 							<div class="blank"></div>
 							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 						</div>
@@ -148,16 +148,6 @@
 			</div>
 		</div>
 	</main>
-
-	<footer>
-		<div class="container-fluide container-footer">
-			<div class="container header-wrap">
-				<div class="row">
-					<div style="font-weight: 400; opacity: 0.3; color: white">Егор Кондрашов 2019</div>
-				</div>
-			</div>
-		</div>
-	</footer>
 
 	<!-- <footer class="pt-5">
 		<div class="container-fluid container-header fixed-bottom">
