--- a/app/article/article_fence-mistake.html
+++ b/app/article/article_fence-mistake.html
@@ -18,12 +18,12 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images End -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,500&display=swap&subset=cyrillic,cyrillic-ext"
-		rel="stylesheet">
+	rel="stylesheet">
 	<link rel="stylesheet" href="../css/main.min.css">
 	<link rel="stylesheet" href="../css/knowledge.css">
 
@@ -63,101 +63,91 @@
 						</div>
 						<div class="header__vk">
 							<a href="https://t.me/brurbanhelp"><img src="../img/header/telegram.svg"
-									alt="https://t.me/brurbanhelp"></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-
-	<main>
-		<div class="container mt-5">
-			<div class="row">
-				<div class="col-md-10">
-					<div class="text-left">
-						<h1 class="h1-title title">Заборы в городе — ошибка</h1>
-					</div>
-
-					<div class="main mt-4">
-						<img class="black article-img blank_fence-mistake" width="70%" height="auto" src="../img/articles/fence-mistake/0.jpg" alt="title">
-					</div>
-
-					<div class="row">
-						<div class="col-md-10">
-							<p class="article-text article-p">Почти каждый забор на улице — это признак неправильного проектирования города. Заборами перекрывают “неудобные” для дорожников, но удобные для пешеходов переходы. Заборы сужают тротуар, а в зимнее время из-за них невозможно чистить дорогу от снега. И, наконец, они убивают людей.</p>
-
-							<h5 class="article-text article-title">Дорожные ограждения опасны.</h5>
-							<p class="article-text article-p">Заборы не обеспечивают безопасность, а лишь создают ее иллюзию. Забор в силу конструкции точно не остановит автомобиль на скорости, а части самого ограждения создадут дополнительный поражающий эффект для пешеходов. Такой шрапнелью могут быть задеты пешеходы в 10 метрах от аварии.</p>
-
-							<h5 class="article-text article-title">Забор не останавливает пешеходов.</h5>
-							<p class="article-text article-p">Если пешеходы постоянно переходили где-то дорогу потому что им это было удобно, то в отсутствие удобной альтернативы они продолжат это делать, перелезая через ограждения или огибая их, как это происходит на улице 22-го съезда.</p>
-
-							<img class="article-img" src="../img/articles/fence-mistake/1.jpg" alt="sub">
-							<p class="article-text img-p">Типо перекрыли пешеходный переход. Просто поставили забор и создали аварийную ситуацию.</p>
-							<p class="article-text article-p">Водители, как правило, притормаживают на пешеходном переходе. Когда на таком участке появляется забор, у водителя появляется иллюзия, что пешеходов в этом месте не будет, поэтому он не сбавит скорость. Понятно, что пешеходы нарушают ПДД, но заборы делают экстремальную ситуацию неожиданной.</p>
-
-							<h5 class="article-text article-title">Невозможно чистить дорогу от снега.</h5>
-							<img class="article-img" src="../img/articles/fence-mistake/2.jpg" alt="sub">
-
-							<h5 class="article-text article-title">Заборы сужают тротуары</h5>
-							<img class="article-img" src="../img/articles/fence-mistake/4.jpg" alt="sub">
-							<p class="article-text img-p">Твой друг всегда будет идти сзади или спереди. Иначе он будет пачкать рукав о забор.</p>
-
-							<h5 class="article-text article-title">Бесполезная трата денег</h5>
-							<img class="article-img" src="../img/articles/fence-mistake/5.jpg" alt="sub">
-							<p class="article-text img-p">Деньги на ветер</p>
-							<p class="article-text article-p">Колоссальные бюджеты тратятся установку и содержание заборов. При этом ограждения бесполезны и опасны.</p>				
-
-							<h5 class="article-text article-title">Успокоение трафика вместо установки заборов
-</h5>
-							<p class="article-text article-p">Установка заборов — неправильный метод повышения безопасности на дорогах. Вместо этого надо успокаивать трафик:<br><br>
-							1. Уменьшение скорость движения автомобиля до 50км/час затем до 40.<br>
-							2. Сужение полос.<br>
-							3. Создание пешеходных переходов там где удобно людям, а не дорожникам.<br>
-							4. Строительство островков безопасности.<br>
-
-							Подробнее о успокоении трафика в Брянске мы опишем в следующих постах.</p>
-							
-
-							<div class="likely pt-5">
-								<div class="vkontakte"><strong class="medium-bold">11</strong></div>
-								<div class="telegram"><strong class="medium-bold">Отправить</strong></div>
+								alt="https://t.me/brurbanhelp"></a>
 							</div>
 						</div>
 					</div>
-					<h5 class="article-text article-title">Другие статьи из раздела</h5>
+				</div>
+			</div>
+		</header>
 
-					<div class="row">
-						<div class="col-md-4 mt-3 blank-block">
-							<a href="article.html">
+		<main>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-10">
+						<div class="text-left">
+							<h1 class="h1-title title">Заборы в городе — ошибка</h1>
+						</div>
+
+						<div class="main">
+							<img class="black article-img blank_fence-mistake" width="70%" height="auto" src="../img/articles/fence-mistake/0.jpg" alt="title">
+						</div>
+
+						<div class="row">
+							<div class="col-md-10">
+								<p class="article-text article-p">Почти каждый забор на улице — это признак неправильного проектирования города. Заборами перекрывают “неудобные” для дорожников, но удобные для пешеходов переходы. Заборы сужают тротуар, а в зимнее время из-за них невозможно чистить дорогу от снега. И, наконец, они убивают людей.</p>
+
+								<h5 class="article-text article-title">Дорожные ограждения опасны.</h5>
+								<p class="article-text article-p">Заборы не обеспечивают безопасность, а лишь создают ее иллюзию. Забор в силу конструкции точно не остановит автомобиль на скорости, а части самого ограждения создадут дополнительный поражающий эффект для пешеходов. Такой шрапнелью могут быть задеты пешеходы в 10 метрах от аварии.</p>
+
+								<h5 class="article-text article-title">Забор не останавливает пешеходов.</h5>
+								<p class="article-text article-p">Если пешеходы постоянно переходили где-то дорогу потому что им это было удобно, то в отсутствие удобной альтернативы они продолжат это делать, перелезая через ограждения или огибая их, как это происходит на улице 22-го съезда.</p>
+
+								<img class="article-img" src="../img/articles/fence-mistake/1.jpg" alt="sub">
+								<p class="article-text img-p">Типо перекрыли пешеходный переход. Просто поставили забор и создали аварийную ситуацию.</p>
+								<p class="article-text article-p">Водители, как правило, притормаживают на пешеходном переходе. Когда на таком участке появляется забор, у водителя появляется иллюзия, что пешеходов в этом месте не будет, поэтому он не сбавит скорость. Понятно, что пешеходы нарушают ПДД, но заборы делают экстремальную ситуацию неожиданной.</p>
+
+								<h5 class="article-text article-title">Невозможно чистить дорогу от снега.</h5>
+								<img class="article-img" src="../img/articles/fence-mistake/2.jpg" alt="sub">
+
+								<h5 class="article-text article-title">Заборы сужают тротуары</h5>
+								<img class="article-img" src="../img/articles/fence-mistake/4.jpg" alt="sub">
+								<p class="article-text img-p">Твой друг всегда будет идти сзади или спереди. Иначе он будет пачкать рукав о забор.</p>
+
+								<h5 class="article-text article-title">Бесполезная трата денег</h5>
+								<img class="article-img" src="../img/articles/fence-mistake/5.jpg" alt="sub">
+								<p class="article-text img-p">Деньги на ветер</p>
+								<p class="article-text article-p">Колоссальные бюджеты тратятся установку и содержание заборов. При этом ограждения бесполезны и опасны.</p>				
+
+								<h5 class="article-text article-title">Успокоение трафика вместо установки заборов
+								</h5>
+								<p class="article-text article-p">Установка заборов — неправильный метод повышения безопасности на дорогах. Вместо этого надо успокаивать трафик:<br><br>
+									1. Уменьшение скорость движения автомобиля до 50км/час затем до 40.<br>
+									2. Сужение полос.<br>
+									3. Создание пешеходных переходов там где удобно людям, а не дорожникам.<br>
+									4. Строительство островков безопасности.<br>
+
+								Подробнее о успокоении трафика в Брянске мы опишем в следующих постах.</p>
+								
+
+								<div class="likely pt-5">
+									<div class="vkontakte"><strong class="medium-bold">11</strong></div>
+									<div class="telegram"><strong class="medium-bold">Отправить</strong></div>
+								</div>
+							</div>
+						</div>
+						<h5 class="article-text article-title">Другие статьи из раздела</h5>
+
+						<div class="row">
+							<div class="col-md-4 blank-block">
+								<a href="article.html">
+									<div class="blank"></div>
+									<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+								</a>
+							</div>
+							<div class="col-md-4 blank-block">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</a>
-						</div>
-						<div class="col-md-4 mt-3 blank-block">
-							<div class="blank"></div>
-							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-						</div>
-						<div class="col-md-4 mt-3 blank-block">
-							<div class="blank"></div>
-							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-4 blank-block">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</main>
-
-	<footer>
-		<div class="container-fluide container-footer">
-			<div class="container header-wrap">
-				<div class="row">
-					<div style="font-weight: 400; opacity: 0.3; color: white">Егор Кондрашов 2019</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+		</main>
 
 	<!-- <footer class="pt-5">
 		<div class="container-fluid container-header fixed-bottom">
@@ -171,14 +161,14 @@
 
 	<script src="../js/scripts.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-	</script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-	</script>
+	integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+</script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+</script>
 
 </body>
 
