--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -172,7 +172,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="#" class="text-muted text-mini underlined pt-2">Все разделы</a>
+					<a href="divisions.html" class="text-muted text-mini underlined pt-2">Все разделы</a>
 				</div>
 			</div>
 
