--- a/app/divTransport.html
+++ b/app/divTransport.html
@@ -82,23 +82,23 @@
 			<div class="row">
 				<div class="col-md-9">
 					<div class="row">
-						<div class="col-md-4 mt-3 blank-block">
-							<a href="article/article_fence-mistake.html">
-								<div class="blank blank_fence-mistake"></div>
-								<p class="sub-title pt-2"><strong>Заборы в городе — ошибка</strong></p>
+						<div class="col-md-12 main-blank-block blank-block">
+							<a href="article/article_marshrutki-bad.html">
+								<div class="main-blank blank blank_marshrutki-bad"></div>
+								<p class="main-blank_sub-title pt-2"><strong>Маршруткам не место в Брянске</strong></p>
 							</a>
 						</div>
-						<div class="col-md-4 mt-3 blank-block">
+						<div class="col-md-4 blank-block">
 							<a href="article/article_crosswalk-for-city.html">
 								<div class="blank blank_article"></div>
 								<p class="sub-title pt-2"><strong>Зачем городу пешеходные переходы</strong></p>
 							</a>
 						</div>
-						<div class="col-md-4 mt-3 blank-block">
+						<div class="col-md-4 blank-block">
 							<div class="blank"></div>
 							<p class="sub-title pt-2"><strong>Как делать безопасные переходы</strong></p>
 						</div>
-						<div class="col-md-4 mt-3 blank-block">
+						<div class="col-md-4 blank-block">
 							<div class="blank"></div>
 							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 						</div>
