Мелкие редачи, свёрстана старница О нас

--- a/app/about.html
+++ b/app/about.html
@@ -56,51 +56,42 @@
 		</div>
 	</header>
 
-	<main>
-		<div class="container container-main">
-			<div class="row title-wrap">
-				<div class="title-block">
-					<h1 class="h1-title title">Городские сервисы урбаниста</h1>
-					<h2 class="h2-subtitle subtitle">Мы разрабатываем сайты, которые делают город лучше</h2>
-				</div>
-			</div>
-			<div class="row content-wrap">
-				<div class="col-xl-4 card-crosswalk">
-					<a href="crosswalk.html">
-						<div class="card-content card pulse">
-							<div class="card-img-wraper">
-								<img src="img/card/location.svg" alt="" class="card__img location">
-							</div>
-							<div class="card-text">
-								<h2 class="card-title">Карта пешеходных переходов</h2>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-xl-4 card-soon">
-					<div class="card-content card card_disable">
-						<div class="card-img-wraper">
-							<img src="img/card/soon.svg" alt="" class="card__img location">
-						</div>
-						<div class="card-text">
-							<h2 class="card-title card-title_disable">Скоро</h2>
-							<h3 class="card-subtitle"></h3>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-4 card-soon">
-					<div class="card-content card card_disable">
-						<div class="card-img-wraper">
-							<img src="img/card/soon.svg" alt="" class="card__img location">
-						</div>
-						<div class="card-text">
-							<h2 class="card-title card-title_disable">Скоро</h2>
-							<h3 class="card-subtitle"></h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+	<main class="main-about">
+		<div class="container-about container">
+			<row class="row aboutUs-row">
+				<h2 class="h2-subtitle subtitle subtitle-about">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam voluptate, sint nesciunt officiis eius? Laudantium eum accusantium odit qui quisquam voluptatum beatae nesciunt, repellat expedita nam doloremque harum obcaecati optio.
+				</h2>
+			</row>
+			<div class="row">
+        <div class="card-custom col-lg-4">
+            <div class="face face1">
+                <div class="content" style="background: url(../img/about/0.jpeg);background-size: cover;background-position: center;position: absolute;">
+                </div>
+                <div class="complete status-bar">Завершено</div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                		<h3>Покрас шкафа возле БГТУ</h3>
+                    <p>Мы нарисовали Александра Белла на коммуникационном шкафу. Находится он возле первого корпуса БГТУ.</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-custom col-lg-4">
+            <div class="face face1">
+                <div class="content" style="background: url(../img/about/1.jpg);background-size: cover;background-position: center;position: absolute;">
+                </div>
+                <div class="active status-bar">Собираем пожертвования</div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                		<h3>Покрас шкафа возле Почты</h3>
+                    <p>Мы хотим раскрасить шкаф возле Почты в Бежице и нам не обойтись без вашей помощи!</p>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
 	</main>
 
 	<script src="js/scripts.min.js"></script>
