--- a/app/divisions.html
+++ b/app/divisions.html
@@ -59,8 +59,8 @@
 							<a href="https://vk.com/designbry"><img src="img/header/vk.svg" alt="https://vk.com/designbry"></a>
 						</div>
 						<div class="header__vk">
-							<a href="https://t.me/brurbanhelp"><img src="img/header/telegram.svg"
-									alt="https://t.me/brurbanhelp"></a>
+							<a href="https://t.me/brurbanhelp" target="_blank"><img src="img/header/telegram.svg"
+									alt="https://t.me/brurbanhelp" target="_blank"></a>
 						</div>
 					</div>
 				</div>
