--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -56,10 +56,10 @@
 					</div>
 					<div class="header-social col-xl-2 offset-lg-3">
 						<div class="header__telegram">
-							<a href="https://vk.com/designbry"><img src="img/header/vk.svg" alt="https://vk.com/designbry"></a>
+							<a href="https://vk.com/designbry" target="_blank"><img src="img/header/vk.svg" alt="https://vk.com/designbry"></a>
 						</div>
 						<div class="header__vk">
-							<a href="https://t.me/brurbanhelp"><img src="img/header/telegram.svg"
+							<a href="https://t.me/brurbanhelp" target="_blank"><img src="img/header/telegram.svg"
 									alt="https://t.me/brurbanhelp"></a>
 						</div>
 					</div>
