Исправил shared статей

--- a/app/article/article_crosswalk-for-city.html
+++ b/app/article/article_crosswalk-for-city.html
@@ -121,7 +121,7 @@
 							
 
 							<div class="likely pt-5">
-								<div class="vkontakte"><strong class="medium-bold">11</strong></div>
+								<div class="vkontakte"><strong class="medium-bold"></strong></div>
 								<div class="telegram"><strong class="medium-bold">Отправить</strong></div>
 							</div>
 						</div>
