--- a/app/about.html
+++ b/app/about.html
@@ -66,7 +66,7 @@
 			<div class="row">
         <div class="card-custom col-lg-4">
             <div class="face face1">
-                <div class="content" style="background: url(../img/about/0.jpeg);background-size: cover;background-position: center;position: absolute;">
+                <div class="content" style="background: url(img/about/0.jpeg);background-size: cover;background-position: center;position: absolute;">
                 </div>
                 <div class="complete status-bar">Завершено</div>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="card-custom col-lg-4">
             <div class="face face1">
-                <div class="content" style="background: url(../img/about/1.jpg);background-size: cover;background-position: center;position: absolute;">
+                <div class="content" style="background: url(img/about/1.jpg);background-size: cover;background-position: center;position: absolute;">
                 </div>
                 <div class="active status-bar">Собираем пожертвования</div>
             </div>
